# drstd

./: Cargo.toml  LICENSE  Makefile  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
dlibc/: .gitignore  Cargo.toml  build.rs
dlibc/core_io/: build.rs
dlibc/core_io/src/: lib.rs
dlibc/core_io/src/b9adc3327ec7d2820ab2db8bb3cc2a0196a8375d/: buffered.rs  impls.rs  mod.rs  util.rs
dlibc/posix-regex/src/: compile.rs  lib.rs  matcher.rs
dlibc/src/: lib.rs
dlibc/src/unix/: c_vec.rs  fs.rs  io.rs  macros.rs  mod.rs  start.rs
dlibc/src/unix/crt0/: mod.rs
dlibc/src/unix/header/: mod.rs
dlibc/src/unix/header/_aio/: mod.rs
dlibc/src/unix/header/_fenv/: mod.rs
dlibc/src/unix/header/arch_aarch64_user/: mod.rs
dlibc/src/unix/header/arch_x64_user/: mod.rs
dlibc/src/unix/header/arpa_inet/: mod.rs
dlibc/src/unix/header/assert/: mod.rs
dlibc/src/unix/header/ctype/: mod.rs
dlibc/src/unix/header/dirent/: mod.rs
dlibc/src/unix/header/dl-tls/: mod.rs
dlibc/src/unix/header/dlfcn/: mod.rs
dlibc/src/unix/header/elf/: mod.rs
dlibc/src/unix/header/fcntl/: mod.rs
dlibc/src/unix/header/float/: mod.rs
dlibc/src/unix/header/fnmatch/: mod.rs
dlibc/src/unix/header/getopt/: mod.rs
dlibc/src/unix/header/grp/: mod.rs
dlibc/src/unix/header/inttypes/: mod.rs
dlibc/src/unix/header/libgen/: mod.rs
dlibc/src/unix/header/locale/: mod.rs
dlibc/src/unix/header/netdb/: dragonos.rs  host.rs  lookup.rs  mod.rs
dlibc/src/unix/header/netinet_in/: mod.rs
dlibc/src/unix/header/netinet_tcp/: mod.rs
dlibc/src/unix/header/poll/: mod.rs
dlibc/src/unix/header/pwd/: dragonos.rs  mod.rs  redox.rs
dlibc/src/unix/header/regex/: mod.rs
dlibc/src/unix/header/semaphore/: mod.rs
dlibc/src/unix/header/sgtty/: mod.rs
dlibc/src/unix/header/signal/: mod.rs
dlibc/src/unix/header/stdio/: constants.rs  default.rs  ext.rs  getdelim.rs  helpers.rs  lookaheadreader.rs  mod.rs  printf.rs  scanf.rs
dlibc/src/unix/header/stdlib/: mod.rs  rand48.rs  random.rs  sort.rs
dlibc/src/unix/header/string/: mod.rs
dlibc/src/unix/header/strings/: mod.rs
dlibc/src/unix/header/sys_auxv/: mod.rs
dlibc/src/unix/header/sys_epoll/: mod.rs
dlibc/src/unix/header/sys_file/: mod.rs
dlibc/src/unix/header/sys_ioctl/: dragonos.rs  linux.rs  mod.rs  redox.rs
dlibc/src/unix/header/sys_mman/: mod.rs
dlibc/src/unix/header/sys_procfs/: mod.rs
dlibc/src/unix/header/sys_ptrace/: mod.rs
dlibc/src/unix/header/sys_random/: mod.rs
dlibc/src/unix/header/sys_resource/: mod.rs
dlibc/src/unix/header/sys_select/: mod.rs
dlibc/src/unix/header/sys_socket/: constants.rs  mod.rs
dlibc/src/unix/header/sys_stat/: mod.rs
dlibc/src/unix/header/sys_statvfs/: mod.rs
dlibc/src/unix/header/sys_time/: mod.rs
dlibc/src/unix/header/sys_timeb/: mod.rs
dlibc/src/unix/header/sys_times/: mod.rs
dlibc/src/unix/header/sys_uio/: mod.rs
dlibc/src/unix/header/sys_un/: mod.rs
dlibc/src/unix/header/sys_utsname/: mod.rs
dlibc/src/unix/header/sys_wait/: mod.rs
dlibc/src/unix/header/termios/: mod.rs
dlibc/src/unix/header/time/: constants.rs  mod.rs  strftime.rs
dlibc/src/unix/header/unistd/: brk.rs  getopt.rs  mod.rs  pathconf.rs  sysconf.rs
dlibc/src/unix/header/wchar/: mod.rs  utf8.rs
dlibc/src/unix/header/wctype/: alpha.rs  casecmp.rs  mod.rs  punct.rs
dlibc/src/unix/ld_so/: access.rs  callbacks.rs  debug.rs  dso.rs  linker.rs  mod.rs  start.rs  tcb.rs
dlibc/src/unix/platform/: mod.rs  rlb.rs
dlibc/src/unix/sync/: mod.rs  mutex.rs  once.rs  semaphore.rs
(+545 files in other folders)
