[package]
name = "dragonos-rs-std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(target_os = "dragonos")'.dependencies]
# Development
dragonos-dsc = { git = "https://github.com/DragonOS-Community/dsc.git", rev = "d6e4fd8" }

# 构建时依赖项
[build-dependencies]
cc = "1.0"