[package]
name = "drstd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#name = "drstd"
#crate-type = ["staticlib"]

#[workspace]
#members = [ "src/ld_so"]

[build-dependencies]
cbindgen = "0.24.3"
cc = "1.0.25"

[dependencies]
cbitset = "0.1.0"
lazy_static = { version = "1.4.0", default-features = false, features = ["spin_no_std"] }
memoffset = "0.5.1"
rand = { version = "0.5.5", default-features = false }
memchr = { version = "2.2.0", default-features = false }
plain = "0.2"
unicode-width = "0.1"
hashbrown = { version = "0.14", default-features = false}
cfg-if = { version = "1.0"}
dlibc = {path = "dlibc"}

[dependencies.goblin]
version = "0.0.21"
default-features = false
features = ["elf32", "elf64", "endian_fd"]

#[target.'cfg(target_os = "linux")'.dependencies]
#sc = "0.2.3"

[target.'cfg(target_os = "dragonos")'.dependencies]
# Development
dragonos-dsc = { git = "https://github.com/DragonOS-Community/dsc.git", rev = "d6e4fd8" }

[features]
default = []
trace = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
