[package]
name = "dlibc"
version = "0.1.0"
authors = ["The Rust Project Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-lang/libc"
homepage = "https://github.com/rust-lang/libc"
documentation = "https://docs.rs/libc/"
keywords = ["libc", "ffi", "bindings", "operating", "system"]
categories = ["external-ffi-bindings", "no-std", "os"]
build = "build.rs"
exclude = ["/ci/*", "/.github/*", "/.cirrus.yml", "/triagebot.toml"]
description = """
Raw FFI bindings to platform libraries like libc.
"""

#[lib]
#name = "dlibc"
#crate-type = ["staticlib"]

[build-dependencies]
cbindgen = "0.24.3"
cc = "1.0.25"

[package.metadata.docs.rs]
features = ["const-extern-fn", "extra_traits"]
default-target = "x86_64-unknown-dragonos"
cargo-args = ["-Zbuild-std=core,alloc,compiler_builtins"]

[dependencies]
cbitset = "0.1.0"
rustc-std-workspace-core = { version = "1.0.0", optional = true }
rand = { version = "0.5.5", default-features = false }
core_io = { path = "core_io", features = ["collections"] }
lazy_static = { version = "1.4.0", default-features = false, features = ["spin_no_std"] }
unicode-width = "0.1"
memchr = { version = "2.2.0", default-features = false }
posix-regex = { path = "posix-regex", features = ["no_std"] }
num-traits =  { version = "0.2.16", default-features = false }

[dependencies.goblin]
version = "0.0.21"
default-features = false
features = ["elf32", "elf64", "endian_fd"]

[target.'cfg(target_os = "dragonos")'.dependencies]
# Development
dragonos-dsc = { git = "https://git.mirrors.dragonos.org/DragonOS-Community/dragonos-dsc.git", rev = "aa61cb0109" }

[features]
default = ["std"]
std = []
align = []
rustc-dep-of-std = ['align', 'rustc-std-workspace-core']
extra_traits = []
const-extern-fn = []
# use_std is deprecated, use `std` instead
use_std = ['std']